tests/miniJava/neg/004241_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { . int [] java ( ) { return 0 ; } }
